@@ -7,6 +7,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - panStamps Lagarto configuration (MODELER-397)
    - Round-robin database (RRD) configuration (MODELER-394)
    - Add Domintell configuration (MODELER-391)
+   - LPD protocol support (MODELER-406)
 
  Fixes:
 
